--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,10 +1,11 @@
 {
   "pages": [
-    "pages/createGroupBuy/index",
     "pages/home/index",
+    "pages/groupBuyPage/index",
+    "pages/createGroupBuy/index",
     "pages/order/index",
     "pages/personalPage/index",
-    "pages/groupBuyPage/index"
+    "pages/loginPage/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -12,7 +13,6 @@
     "navigationBarTitleText": "Weixin",
     "navigationBarTextStyle": "black"
   },
-  "style": "v2",
   "sitemapLocation": "sitemap.json",
   "usingComponents": {
     "van-button": "npm/@vant/weapp/button/index",
